--- a/client/src/styles/scss/_app.scss
+++ b/client/src/styles/scss/_app.scss
@@ -29,3 +29,9 @@ p {
     margin: 0 auto;
   }
 }
+
+@media (max-width: 320px) {
+  p {
+    line-height: 28px;
+  }
+}
